updates from sonarcloud analysis