@@ -4,13 +4,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 import tech.antoniosgarbi.gestorpeixaria.dto.auth.*;
 import tech.antoniosgarbi.gestorpeixaria.exception.TokenRefreshException;
 import tech.antoniosgarbi.gestorpeixaria.model.RefreshToken;
-import tech.antoniosgarbi.gestorpeixaria.repository.UserRepository;
 import tech.antoniosgarbi.gestorpeixaria.security.jwt.JwtUtils;
 import tech.antoniosgarbi.gestorpeixaria.security.services.RefreshTokenService;
 import tech.antoniosgarbi.gestorpeixaria.security.services.UserDetailsImpl;
@@ -24,26 +23,19 @@ public class LoginController {
 
     private final AuthenticationManager authenticationManager;
 
-    private final UserRepository userRepository;
-
     private final RefreshTokenService refreshTokenService;
-
-    private final PasswordEncoder encoder;
 
     private final JwtUtils jwtUtils;
 
-    public LoginController(AuthenticationManager authenticationManager, UserRepository userRepository, RefreshTokenService refreshTokenService, PasswordEncoder encoder, JwtUtils jwtUtils) {
+    public LoginController(AuthenticationManager authenticationManager, RefreshTokenService refreshTokenService, JwtUtils jwtUtils) {
         this.authenticationManager = authenticationManager;
-        this.userRepository = userRepository;
         this.refreshTokenService = refreshTokenService;
-        this.encoder = encoder;
         this.jwtUtils = jwtUtils;
-        StringBuffer sb = new StringBuffer();
     }
 
 
     @PostMapping("/signin")
-    public ResponseEntity<?> authenticateUser(@RequestBody LoginRequest loginRequest) {
+    public ResponseEntity<LoginResponse> authenticateUser(@RequestBody LoginRequest loginRequest) {
 
         Authentication authentication = authenticationManager
                 .authenticate(new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
@@ -54,8 +46,7 @@ public class LoginController {
 
         String jwt = jwtUtils.generateJwtToken(userDetails);
 
-        List<String> roles = userDetails.getAuthorities().stream().map(item -> item.getAuthority())
-                .collect(Collectors.toList());
+        List<String> roles = userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
 
         RefreshToken refreshToken = refreshTokenService.createRefreshToken(userDetails.getId());
 
@@ -64,7 +55,7 @@ public class LoginController {
     }
 
     @PostMapping("/refreshtoken")
-    public ResponseEntity<?> refreshtoken(@RequestBody RefreshRequest request) {
+    public ResponseEntity<RefreshResponse> refreshtoken(@RequestBody RefreshRequest request) {
         String requestRefreshToken = request.getRefreshToken();
 
         return refreshTokenService.findByToken(requestRefreshToken)
@@ -81,7 +72,7 @@ public class LoginController {
     @PostMapping("/logout")
     public ResponseEntity<String> logoutUser(@RequestBody LogOutRequest logOutRequest) {
         refreshTokenService.deleteByUserId(logOutRequest.getUserId());
-        return ResponseEntity.ok(new String("Log out successful!"));
+        return ResponseEntity.ok("Log out successful!");
     }
 
 }
